lab1/Test/L1-A-8-23.cmm
int iMW ( struct sob30UhRtu7qa9iD0O9x {
  struct fq9Re2E1HHIfhpfcayiQ N5vqFUbLyE2TKBL91 ;
  int jdnh0q4XfA74VVdUjZY , q61ImZvYlbzYdBbOgc1A ;
  float dbj = DUe64Jb1gh65HPei || lzGuUmY && buevsvi5vA7wtC 
    < bfdUCpdsx ( V0PfkknmRIMspIXm74L = a = on9fmgD = 
    I4OPjHe285YRP = PDWGX0PfA != V + EulMmN / - J5jRgvIEz0p9kTakH 
    [ gm_35 = BEY5_yhX > GHX11K9QlJYKZ - - ( LhO3 == - 
    CA6n0y6yf ( VsjglPEQ_ , gD9ltu9Lp1 + b0aK6uNd_L7nAqOq 
    [ int KP4JU >= Jf <= tWGilYQDyMe + M5pBGmpvSV ] - 
    1848363650.1375037452 . _EUY3uVCNZM8 ) ) / 1086624691 
    . H ] * - ! hPDv8ex ( ) ) ;
}RvtVgo [ 449836099 ] ) {
}
int aFKKJuLO4RBq4 
;
struct {
}VT ( ) {
  struct keQTbq3uYJkZbY9so fH == ;
  struct UD UxblhEiWCXP ;
  int nALA6PBISkEwjvHHzjl ;
  if ( wFkOLRF59rj12P )   while ( . BSoorV8IRH2 ) 
      D3NZI6 ;

else   return NMHr5622b1ze0E ;
< 
}
struct fFgnVwtRJuQ2WV ;
struct HNACX7Jjqzo04k ;
int a3cqbr3x ( ) {
}
int CIFTqYu9r_OssNLZl , baF9tGIOzpJtNo6KvT 

;
int ;
int ;
int ;
int yU74YhGFQ32ZVvRtowQ ( int e , int iS9yII8T0SLb5N 
  ) {
}
int ;
int ;
int ;
int YPmfoe00N ( ) {
}
int UwYVARLVzH ( ) {
  ib1PBDQBEDF5yYrunp ;
  O4Z75YV9YwMg3bacf3 ;
  if ( d99NSBLH3Amdnyct ) {
    WiqJ45_tBoWkGX_p ;
    if ( xxRvXWz )     a6wjqyTsiyOGYSA ;
else     if ( _VTQ04q )     CapLSyZ6 ;


  }
}
int ;
int ;
int ;
